# lseg-data-validator

./: README.md  SPEC.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: field-reference.md
fin_validator/: __init__.py  cli.py  report.py
fin_validator/checks/: __init__.py  anomaly.py  completeness.py  consistency.py  schema_diff.py
fin_validator/templates/: report.html.j2
tests/: __init__.py  test_anomaly.py  test_cli_report.py  test_completeness.py  test_schema_diff.py
tests/fixtures/: __init__.py  generate.py
