[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-data-validator"
version = "0.1.0"
description = "Data quality toolkit for financial market data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "plotly>=5.15",
    "streamlit>=1.25",
    "typer>=0.9",
    "jinja2>=3.1",
]

[project.scripts]
fin-validator = "fin_validator.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.7",
    "ruff>=0.0.285",
]

[tool.hatch.build.targets.wheel]
packages = ["fin_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
